--- a/city_portal/reports/templates/reports/profile.html
+++ b/city_portal/reports/templates/reports/profile.html
@@ -1,49 +1,13 @@
 {% extends 'reports/base.html' %}
-
-{% block title %}Главная - Сделаем лучше вместе!{% endblock %}
-<body>
-    {% block content %}
-    <main class="container">
-        <h1>Личный кабинет</h1>
-        <p><strong>Логин:</strong> логин</p>
-        <p><strong>ФИО:</strong> ФИО</p>
-        <p><strong>Email:</strong> EMAIL</p>
-
-        <div class="cards-container">
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-content">
-                    <p><strong>Название</strong></p>
-                    <p>Категория</p>
-                    <p>Временная метка</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-content">
-                    <p><strong>Название</strong></p>
-                    <p>Категория</p>
-                    <p>Временная метка</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-content">
-                    <p><strong>Название</strong></p>
-                    <p>Категория</p>
-                    <p>Временная метка</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-content">
-                    <p><strong>Название</strong></p>
-                    <p>Категория</p>
-                    <p>Временная метка</p>
-                </div>
-            </div>
-        </div>
-    </main>
-</body>
-</html>
+{% block content %}
+<h2>Ваши заявки</h2>
+<ul>
+    {% for report in reports %}
+        <li>{{ report.title }} - {{ report.get_status_display }}</li>
+    {% empty %}
+        <li>Заявок нет</li>
+    {% endfor %}
+</ul>
+<a href="{% url 'add_order' %}">Создать заявку</a>
 {% endblock %}
+
