--- a/city_portal/reports/templates/reports/register.html
+++ b/city_portal/reports/templates/reports/register.html
@@ -1,33 +1,9 @@
 {% extends 'reports/base.html' %}
-
-{% block title %}Главная - Сделаем лучше вместе!{% endblock %}
-<body>
-    {% block content %}
-    <div class="container">
-        <form class="registration-form">
-            <label for="full_name">ФИО</label>
-            <input type="text" id="full_name" placeholder="Введите ФИО">
-            
-            <label for="login">Логин</label>
-            <input type="text" id="login" placeholder="Введите логин">
-            
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Введите email">
-            
-            <label for="password">Пароль</label>
-            <input type="password" id="password" placeholder="Введите пароль">
-            
-            <label for="confirm_password">Повтор пароля</label>
-            <input type="password" id="confirm_password" placeholder="Повторите пароль">
-            
-            <label class="checkbox">
-                <input type="checkbox">
-                Согласие на обработку персональных данных
-            </label>
-
-            <button type="submit">Зарегистрироваться</button>
-        </form>
-    </div>
-</body>
-</html>
+{% block content %}
+<h2>Регистрация</h2>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Зарегистрироваться</button>
+</form>
 {% endblock %}
