--- a/city_portal/reports/templates/reports/base.html
+++ b/city_portal/reports/templates/reports/base.html
@@ -12,11 +12,15 @@
     <header>
         <img src="{% static 'reports/10237363.png' %}" alt="Логотип">
         <h1>Сделаем лучше вместе!</h1>
-        <div class="menu-icon" onclick="toggleMenu()" onkeydown="handleKey(event)" role="button" tabindex="0">☰</div>
+        <div class="menu-icon">☰</div>
         <nav>
             <a href="{% url 'index' %}">Главная</a>
             {% if user.is_authenticated %}
-                <a href="{% url 'profile' %}">Личный кабинет</a>
+                {% if user.is_staff %}
+                    <a href="{% url 'admin_profile' %}">Панель администратора</a>
+                {% else %}
+                    <a href="{% url 'profile' %}">Личный кабинет</a>
+                {% endif %}
                 <a href="{% url 'logout' %}">Выход</a>
             {% else %}
                 <a href="{% url 'register' %}">Регистрация</a>
@@ -30,6 +34,10 @@
     <footer>
         <p>&copy; 2025 Ваша компания. Все права защищены.</p>
     </footer>
-    <script src="{% static 'reports/script.js' %}"></script>
+    <script>
+        document.querySelector('.menu-icon').addEventListener('click', function() {
+            document.querySelector('nav').classList.toggle('menu-open');
+        });
+    </script>
 </body>
 </html>
